Refactor: reorganized drivers and services, general update of swagger, database and routes
